--- a/deploy_openshift.4
+++ b/deploy_openshift.4
@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # use default service name for the fuse backend
-BACKEND_URL="http://camel-rest-sql:8080/services/app/expenses"
+BACKEND_URL="http://nfuse:8080/services/app/expenses"
 BUILD_DID=build
 
 if [ -d "$BUILD_DIR" ]
@@ -17,10 +17,10 @@ echo "backEndUrl=$BACKEND_URL"
 # set react url just to api - nginx will handle the rest
 sed -ri  "s|=(.*)|= \"/api\";|g" src/utils/backendUrl.ts
 
-# set nginx proxy pass url 
+# set nginx proxy pass url
 sed -ri  "s|proxy_pass.*|proxy_pass $BACKEND_URL;|g" ./nginx.conf
 
-echo "build for prod"   
+echo "build for prod"
 yarn build
 
 #copy web server config
@@ -31,4 +31,3 @@ oc new-build --image-stream=nginx  --binary=true --name=nodejs-gui
 oc start-build nodejs-gui --from-dir=. --follow
 oc new-app nodejs-gui
 oc expose svc nodejs-gui
-
