--- a/deploy_openshift-direct.4
+++ b/deploy_openshift-direct.4
@@ -1,5 +1,6 @@
 #!/bin/sh
 
+# deploy project direct without using tekton pipelines
 # use default service name for the fuse backend
 BACKEND_URL="http://expenses-backend-quarkus:8080"
 BUILD_DID=build
